test_suite/tests/ui/conflict/flatten-skip-serializing.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct Foo {
    #[serde(flatten, skip_serializing)]
    other: Other,
}

#[derive(Serialize)]
struct Other {
    x: u32,
}

fn main() {}
